# rustyoutubeupload

./: .gitignore  Cargo.toml  README.md  clip.py  data.json  gen.py  main.py  requirements.txt
src/: chromedriver.rs  main.rs  python.rs  upload.rs  video.rs
