[package]
name = "rustyoutubeupload"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = "1.25.0"
reqwest = { version = "0.11.14", features = ["json"] }

selenium-rs = "0.1.2"
thirtyfour = "0.31.0"
terminal_color_builder = "0.1.1"

zip = "0.6.4"

serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.92"
serde_xml = "0.9.1"
roxmltree = "0.18.0"
fs_extra = "1.3.0"